--- a/app/views/projects/_nested_list.haml
+++ b/app/views/projects/_nested_list.haml
@@ -2,9 +2,7 @@
   - next unless project.active? or params[:show_inactive].present?
   %tr{class: "reveal-on-hover", target: ".actions" }
     %td
-      = ("&nbsp; &nbsp; " * (nesting - 1)).html_safe
-      %span{style: "font-size: #{100 * (0.9 ** (nesting - 1))}%;"}
-        = link_to project.name, project_path(project)
+      = link_to project.name_with_ancestry, project_path(project)
     %td.rate
       - if project.rate > 0
         %span= project.rate.format
