--- a/app/views/work_entries/edit.haml
+++ b/app/views/work_entries/edit.haml
@@ -10,7 +10,7 @@
     %table.form
       %tr
         %td= f.label :project_id, "Project"
-        %td= f.select :project_id, project_options_for_select(exclude_inactive: true, selected: @entry.project_id), {}, class: "form-control"
+        %td= f.select :project_id, project_options_for_select(exclude_inactive: true, selected_id: @entry.project_id), {}, class: "form-control"
       %tr
         %td= f.label :date
         %td= f.date_field :date, class: "form-control"
