--- a/app/views/work_entries/_new_timer.haml
+++ b/app/views/work_entries/_new_timer.haml
@@ -1,10 +1,10 @@
 = form_for current_user.work_entries.new do |f|
   %p.pull-left
     %strong New timer: &nbsp;
-    = f.select :project_id, project_options_for_select(exclude_inactive: true, selected_id: current_user.last_project.try(:id)), {}, class: "form-control", style: "display: inline-block; max-width: 280px;"
+    = f.text_field :invoice_notes, class: "form-control medium inline", placeholder: "Whatcha workin on?"
     &nbsp;
   %p.pull-left
-    = f.text_field :goal_notes, class: "form-control medium inline", placeholder: "What's your goal?"
+    = f.select :project_id, project_options_for_select(exclude_inactive: true, selected_id: current_user.last_project.try(:id)), {}, class: "form-control", style: "display: inline-block; max-width: 280px;"
     &nbsp;
     = f.submit "Start", class: "btn btn-primary btn-sm"
     &nbsp;
