Fix broken popover on timesheet

--- a/app/views/work_entries/_list.haml
+++ b/app/views/work_entries/_list.haml
@@ -40,7 +40,7 @@
         %td.nowrap
           %span.em.text-success #{entry.pending_duration.round(1)} h...
         %td.nowrap
-          %button.btn.btn-xs.btn-danger.has-popover{data: {toggle: "popover", title: "Stop Timer", placement: "right", content: "NOT LOADED" }}
+          %button.btn.btn-xs.btn-danger.has-popover{data: {toggle: "popover", title: "Stop Timer", placement: "top", content: "NOT LOADED" }}
             stop
           .popover-content.hidden
             = form_for entry do |f|
