--- a/app/assets/stylesheets/work_entries_list.scss
+++ b/app/assets/stylesheets/work_entries_list.scss
@@ -23,15 +23,19 @@ table#timesheet {
 }
 
 .totals-table {
-  width: 100%;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -10px;
+  margin-bottom: -10px;
   th, td {
     padding: 5px;
     border-bottom: 1px solid #eee;
   }
-  .project-name {
-    font-size: 90%;
+  .data-cell {
+    text-align: right;
+    width: 80px;
   }
-  margin-bottom: 30px;
 }
 
 div.pagination {
