Reorganize entries UI to be more 24/7-friendly
- Reorganize entries list:
  - Move dates to in-line
  - display start & end times
  - wrap project & entry text
  - Move Actions to a hover bubble
  - Remove Bill button & billed status
  - Move Stop button to a tiny icon in the actions bubble
  - Normalize font sizes
- New Timer form: Reorganize to reflect entries list layout; remove Edit button
- When starting a new timer, stop any other running timers
- Changes to entry edit form:
  - Remove is_billed setting
  - Make created_at time editable (for now; I'll migrate to a new col started_at soon)

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -30,6 +30,7 @@
 
 .def { cursor: help; }
 .tooltip { white-space: normal; }
+.tooltip-width-150 .tooltip { width: 200px; }
 .max-400 { max-width: 400px; }
 
 // TODO: Get rid of this, replace with Bootstrap grids
