Use started_at instead of date and created_at
Previously I was tracking the start day using `date` and time using the
time portion of the created_at timestamp. This became a problem now that
I'm using start & end times more strongly in the UI.

- WorkEntry:
  - Add column `started_at`
  - Column `date` is now deprecated, but won't remove it yet
  - Validate presence of started_at
  - In #pending_duration and #sum_duration, use started_at instead of created_at
  - #eligible_for_merging? no longer checks that entries are same date
- WorkEntriesController:
  - #index:
    - Remove old #warn_if_old_unbilled_entries
    - Sort results by started_at
    - Display start & end times for each entry based on started_at
    - Display current timezone reminder
  - #create: set started_at (equal to created_at) instead of date
  - #edit: Remove the merge button & text, now that it's on the list
  - #update: compose started_at from separate date and time inputs
  - Separate create_params from update_params
- JS:
  - Removed old code re: billing
  - Updated the merge logic to accept started_at_date instead of just date
- Update factories to populate started_at instead of date

--- a/app/views/work_entries/_filters.haml
+++ b/app/views/work_entries/_filters.haml
@@ -9,12 +9,12 @@
         %td Date
         %td
           Min:
-          = date_field_tag :date_start, @filters[:date_start], class: "form-control", style: "display: inline-block; width: 200px;"
+          = date_field_tag :started_since, @filters[:started_since], class: "form-control", style: "display: inline-block; width: 200px;"
       %tr
         %td
         %td
           Max:
-          = date_field_tag :date_end, @filters[:date_end], class: "form-control", style: "display: inline-block; width: 200px;"
+          = date_field_tag :started_by, @filters[:started_by], class: "form-control", style: "display: inline-block; width: 200px;"
       %tr
         %td
         %td
