--- a/app/views/work_entries/_new_timer.haml
+++ b/app/views/work_entries/_new_timer.haml
@@ -7,3 +7,4 @@
     = f.text_field :invoice_notes, class: "form-control inline", placeholder: "Whatcha workin on?", style: "width: 250px;"
     &nbsp;
     %button.btn.btn-success.btn-sm{type: "submit"} #{glyph("play")} Start
+    %button.btn.btn-default.btn-sm{name: "submit_edit", type: "submit"} #{glyph("pencil")}
