--- a/app/views/work_entries/index.haml
+++ b/app/views/work_entries/index.haml
@@ -1,5 +1,5 @@
 %div
-  = render partial: "totals"
+  = render partial: "metrics"
 
 .centered-1000
   %div{style: "padding-top: 20px; padding-bottom: 10px;"}
